# SCBF

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yaml
benchmark/: README.md  common.py  run_all_sweeps.py  sweep_counter_bits.py  sweep_memory.py
src/: api.rs  config.rs  counter.rs  error.rs  fastx.rs  filter.rs  lib.rs  main.rs  spectrum.rs
tests/: backend_matrix.rs  pipeline_matrix.rs
